--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "publish": true
   },
   "dependencies": {
-    "hono": "4.8.2",
+    "hono": "^4.10.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
