--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.35.0",
     "vite": "^6.0.0",
-    "wrangler": "4.21.x"
+    "wrangler": "^4.49.0"
   },
   "scripts": {
     "build": "tsc -b && vite build",
