--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
   "name": "personal-react-site",
-  "description": "A template for building a React application with Vite, Hono, and Cloudflare Workers",
-  "version": "0.0.0",
-  "cloudflare": {
-    "label": "Vite React Template",
-    "products": [
-      "Workers"
-    ],
-    "categories": [],
-    "icon_urls": [
-      "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/5ca0ca32-e897-4699-d4c1-6b680512f000/public"
-    ],
-    "preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/fc7b4b62-442b-4769-641b-ad4422d74300/public",
-    "publish": true
-  },
+  "description": "Holden Vail's Personal Portfolio Website",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "hono": "^4.10.6",
     "react": "19.0.0",
@@ -40,7 +29,7 @@
     "build": "tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "check": "tsc && vite build && wrangler deploy --dry-run",
-    "deploy": "wrangler deploy",
+    "deploy": "npm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint .",
     "preview": "npm run build && vite preview"
